--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
 	background-color: #A2DED0;
 }
 
+
 .jumbotron {
 	background-image:url('http://upload.wikimedia.org/wikipedia/commons/6/62/Drip_Coffee_Bangkok.jpg'); 
 	padding: 20%;
@@ -9,8 +10,9 @@ body {
 	background-size: cover;
 	width: 100%;
 	margin-top: -40px;
-	background-position:  center;
-
+	background-attachment: fixed;
+	background-position:  center -238px;
+	
 
 }
 
@@ -50,10 +52,12 @@ body {
 	padding-top: 10px;
 }
 
+
 footer {
 	background-color: #D64541;
 	position: absolute;
 	width: 100%;
+	height: auto;
 }
 
 footer ul li {
@@ -72,7 +76,21 @@ footer p {
 footer a,
 footer p {
 
-	color: white;
+	color:#fff;
 	vertical-align: middle;
+
+
 }
 
+
+/********************
+MEDIA QUERIES
+********************/
+@media screen and (max-width: 776px) {
+	.features img {
+		max-width: 90%;
+		margin: auto;
+	}
+
+
+}
